--- a/Hyperledger/Proof-of-Concepts/risk-mgt-network/package.json
+++ b/Hyperledger/Proof-of-Concepts/risk-mgt-network/package.json
@@ -4,8 +4,9 @@
   "description": "Central Risk Book on a Distributed Ledger",
   "scripts": {
     "test": "mocha --recursive",
-    "deployNetwork": "composer archive create --sourceName risk-mgt-network --sourceType module --archiveFile risk-mgt-network.bna &&  composer network deploy -p hlfv1 --archiveFile risk-mgt-network.bna  --enrollId PeerAdmin --enrollSecret adminpw && composer network list -n digitalproperty-network --enrollId admin --enrollSecret adminpw -p hlfv1",
-    "updateNetwork": "composer archive create --sourceName risk-mgt-network --sourceType module --archiveFile risk-mgt-network.bna &&  composer network update -p hlfv1 --archiveFile risk-mgt-network.bna  --enrollId admin --enrollSecret adminpw && composer network list -n digitalproperty-network --enrollId admin --enrollSecret adminpw -p hlfv1",
+    "deployNetwork": "composer archive create --sourceName risk-mgt-network --sourceType module --archiveFile risk-mgt-network.bna",
+    "updateNetwork": "composer archive create --sourceName risk-mgt-network --sourceType module --archiveFile risk-mgt-network.bna &&  composer network update -p hlfv1 --archiveFile risk-mgt-network.bna  --enrollId admin --enrollSecret adminpw && composer network list -n risk-mgt-network --enrollId admin --enrollSecret adminpw -p hlfv1",
+    "deploytoNet": "composer network deploy -p hlfv1 --archiveFile dist/risk-mgt-network.bna  --enrollId PeerAdmin --enrollSecret adminpw && composer network list -n risk-mgt-network --enrollId admin --enrollSecret adminpw -p hlfv1",
     "deploybanana": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/risk-mgt-network.bna"
   },
   "author": "Ryan Hendricks",
@@ -23,6 +24,7 @@
     "mocha": "latest"
   },
   "dependencies": {
-    "composer-cli": "^0.11.1"
+    "composer-cli": "^0.11.1",
+    "node-red-contrib-hyperledger-composer": "^1.0.1-20170531221840"
   }
 }
